2007-08-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-search-parser.c: 
	When slow searching for ':'
	(Bug #364768 again)
	
	* src/yelp-search-parser.c: 
	Fix apropos handling on Fedora
	Fix possible memleak
	Handle results with spaces
	(bug #370167 - Matthias Clasen)

	* src/yelp-man-parser.c:
	Handle '\*=' escape sequence correctly
	(bug #358825 - Björn Lindqvist)

	* src/yelp-utils.c: 
	Resolve a full path within a ghelp uri
	correctly (bug #464295)
	
	* src/yelp-gecko-services.cpp:
	* src/yelp-debug.c:
	reduce relocations by removing unnecessarily 
	static data, and non-const data.
	(bug #457082 - Christian Persch)

	* src/yelp-window.c: 
	s/std{out,err}/str_std{out,err}/g
	Fixes build on Solaris - bug #462440
	
	* src/yelp-base.c: 
	Remove forgotten c++ comment
	(bug #462813, hopefully)
	
	* src/yelp-main.c: 
	Mark -help contents for translation
	(bug #450168 - Gabor Kelemen)
	
	* yelp.desktop.in.in: 
	Remove suffix from icon
	(bug #463281 - Sven Arvidsson)
	
	* src/yelp-toc.c:
	* src/yelp-search.c:
	Make error messages somewhat less cryptic
	Remove strange markup that resulted from emacs
	and unicode characters not mixing.
	
	* src/yelp-print.c:
	Mark title as translatable (bug #458693 -
	Gabor Kelemen)
	
	* src/yelp-search-parser.c: 
	* src/yelp-window.c:
	Redefine langs to allow compilation with
	Beagle (bug #462056)
	Make results page show again (where did it go, I wonder?)
	
2007-07-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-transform.c:
	- Register EXSLT extensions, so the world can be right again

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

        * configure.in: 
        * NEWS:
        - Version 2.19.1

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/Makefile.am: 
	Disable test programs for now
	
== REWORK CHANGES ==

2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>

	Merge of yelp rework branch:
	- Depreciate yelp-*-pager in favour of
	  yelp-document and such.
	  Gives us on-demand loading of pages