@@ -1,7 +1,12 @@
 2007-08-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-print.c:
+	Remove extra markup from message dialog
+	(bug #381431 - Christian Persch)
+
 	* src/yelp-search-parser.c: 
-	When slow searching for ':'
+	When slow searching for ':',
+	don't crash
 	(Bug #364768 again)
 	
 	* src/yelp-search-parser.c: 
